# kolmio

./: CMakeLists.txt  README.md  filters.cl  lkflow.cl  main.cpp
